fix:prev and back button alignment for manufacturing

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/prev-next-topic.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/prev-next-topic.less
@@ -8,8 +8,7 @@
   .gu-pre-topic_container,
   .gu-next-topic_container {
     display: flex;
-    align-items: center;
-    max-width: 22.75rem;
+    align-items: center;    
     border: 1px solid var(--grey-border);
     border-radius: 0.75rem;
     padding: 1rem 0.5rem;
@@ -109,7 +108,15 @@
    @media (min-width: 1024px) {
   .gu-next-topic_container-wrapper ,
    .gu-pre-topic_container-wrapper {
-width:50%;
+width:40%;
+
+  }
+}
+
+   @media (min-width: 1024px) {
+  .gu-next-topic_container-wrapper {
+   float: right;
+ 
 
   }
 }
